// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <PluginMainPanel /> should renders with all props correctly 1`] = `
<div
  className="panel-body"
>
  <SortableTable
    columnNameSortBy="nameColumn"
    data={
      Array [
        1,
        3,
        5,
        7,
        9,
      ]
    }
    emptyDataMessage="No list"
    headers={
      Array [
        Object {
          "key": "clinicalNotesType",
          "title": "Type",
          "width": "23%",
        },
      ]
    }
    id={25}
    onCellClick={[Function]}
    onHeaderCellClick={[Function]}
    resourceData={
      Array [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
      ]
    }
    sortingOrder="asc"
    table=""
  />
  <div
    className="panel-control"
  >
    <div
      className="wrap-control-group"
    >
      <div
        className="control-group with-indent right"
      />
    </div>
  </div>
</div>
`;

exports[`Component <PluginMainPanel /> should renders with pagination component correctly 1`] = `
<div
  className="panel-body"
>
  <SortableTable
    columnNameSortBy="nameColumn"
    data={
      Array [
        3,
      ]
    }
    emptyDataMessage="No list"
    headers={
      Array [
        Object {
          "key": "clinicalNotesType",
          "title": "Type",
          "width": "23%",
        },
      ]
    }
    id={25}
    onCellClick={[Function]}
    onHeaderCellClick={[Function]}
    resourceData={
      Array [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
      ]
    }
    sortingOrder="asc"
    table=""
  />
  <div
    className="panel-control"
  >
    <div
      className="wrap-control-group"
    >
      <div
        className="control-group with-indent left"
      >
        <PaginationBlock
          entriesPerPage={1}
          offset={1}
          setOffset={[Function]}
          totalEntriesAmount={5}
        />
      </div>
      <div
        className="control-group with-indent right"
      />
    </div>
  </div>
</div>
`;

exports[`Component <PluginMainPanel /> should renders with spinner and create button components correctly 1`] = `
<div
  className="panel-body"
>
  <SortableTable
    columnNameSortBy="nameColumn"
    data={
      Array [
        3,
      ]
    }
    emptyDataMessage="No list"
    headers={
      Array [
        Object {
          "key": "clinicalNotesType",
          "title": "Type",
          "width": "23%",
        },
      ]
    }
    id={25}
    onCellClick={[Function]}
    onHeaderCellClick={[Function]}
    resourceData={
      Array [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
      ]
    }
    sortingOrder="asc"
    table=""
  />
  <Spinner />
  <div
    className="panel-control"
  >
    <div
      className="wrap-control-group"
    >
      <div
        className="control-group with-indent left"
      >
        <PaginationBlock
          entriesPerPage={1}
          offset={1}
          setOffset={[Function]}
          totalEntriesAmount={5}
        />
      </div>
      <div
        className="control-group with-indent right"
      >
        <PTButton
          className="btn btn-success btn-inverse btn-create"
          onClick={[Function]}
        >
          <i
            className="btn-icon fa fa-plus"
          />
          <span
            className="btn-text"
          >
             Create
          </span>
        </PTButton>
      </div>
    </div>
  </div>
</div>
`;
